crates/pitboard/tests/snapshots/contract__stow_nothing_left.snap
---
source: tests/contract.rs
expression: "serde_json :: json! ({ \"exit\" : code, \"envelope\" : value })"
---
{
  "exit": 0,
  "envelope": {
    "v": 1,
    "command": "stow",
    "ok": true,
    "data": {
      "stowed": false
    },
    "warnings": [],
    "error": null
  }
}
