crates/pitboard/tests/snapshots/contract__stow_unconfirmed.snap
---
source: crates/pitboard/tests/contract.rs
expression: "serde_json :: json! ({ \"exit\" : code, \"envelope\" : value })"
---
{
  "exit": 2,
  "envelope": {
    "v": 1,
    "command": "stow",
    "ok": false,
    "data": null,
    "warnings": [],
    "error": {
      "code": "confirmation_needed",
      "message": "`pitboard stow` asks before it deletes anything, and can ask only in a terminal without `--json`. Nothing was changed. Run it in a terminal, or add `--yes`.",
      "cause": null
    }
  }
}
