crates/pitboard/tests/snapshots/contract__use_already_active.snap
---
source: tests/contract.rs
expression: "serde_json :: json! ({ \"exit\" : code, \"envelope\" : value })"
---
{
  "exit": 0,
  "envelope": {
    "v": 1,
    "command": "use",
    "ok": true,
    "data": {
      "to": "beta",
      "changed": false,
      "config_updated": false
    },
    "warnings": [],
    "error": null
  }
}
